--- a/src/lib/TreeView/TreeView.scss
+++ b/src/lib/TreeView/TreeView.scss
@@ -46,7 +46,7 @@
             animation: selection-indicator 83ms linear;
         }
     }
-    &.expanded .icon {
+    &.expanded :global(svg) {
         transform: rotate(180deg);
     }
     &:hover,
@@ -57,12 +57,9 @@
     &:active {
         color: var(--text-color-secondary);
     }
-    .icon {
+    :global(svg) {
+        @include icon($size: 12px);
         transition: 166ms cubic-bezier(0, 0, 0, 1) transform;
-        font: {
-            family: var(--font-family-icon);
-            size: 12px;
-        }
     }
 }
 
