space up header chips

--- a/src/lib/HeaderChip/HeaderChip.scss
+++ b/src/lib/HeaderChip/HeaderChip.scss
@@ -1,4 +1,6 @@
 .header-chip {
+    width: fit-content;
+    margin-bottom: 8px;
     padding: 4px 16px;
     border-radius: 50px;
     background-color: var(--subtle-color-secondary);
