fix HyperlinkButton taking up fullwidth

--- a/src/lib/HeaderChip/HeaderChip.scss
+++ b/src/lib/HeaderChip/HeaderChip.scss
@@ -1,5 +1,5 @@
 .header-chip {
-    width: fit-content;
+    display: inline-flex;
     margin-bottom: 8px;
     padding: 4px 16px;
     border-radius: 50px;
