--- a/src/lib/TreeView/TreeView.scss
+++ b/src/lib/TreeView/TreeView.scss
@@ -46,9 +46,6 @@
             animation: selection-indicator 83ms linear;
         }
     }
-    &.expanded :global(svg) {
-        transform: rotate(180deg);
-    }
     &:hover,
     &.selected,
     &.selected:active {
@@ -65,4 +62,16 @@
 
 .subtree-items {
     padding-left: 16px;
+    height: 0;
+    overflow: hidden;
+    transition: 250ms cubic-bezier(0, 0, 0, 1) height;
+}
+
+.subtree.expanded {
+    .subtree-items {
+        height: var(--treeview-subtree-height);
+    }
+    :global(svg) {
+        transform: rotate(180deg);
+    }
 }
