Make hero section somewhat responsive

--- a/src/lib/PageSection/PageSection.scss
+++ b/src/lib/PageSection/PageSection.scss
@@ -3,6 +3,10 @@
     z-index: 1;
     padding: 72px;
 
+    @media only screen and (max-width: 640px) {
+        padding: 40px;
+    }
+
     h1, h2, h3 {
         margin: 0;
         font-weight: 600;
