--- a/src/lib/PageSection/PageSection.scss
+++ b/src/lib/PageSection/PageSection.scss
@@ -35,6 +35,6 @@
     }
 
     .buttons-spacer {
-        @include flex($wrap: true, $gap: 8px, $wrap true);
+        @include flex($wrap: true, $gap: 8px);
     }
 }
