--- a/src/lib/Button/Button.scss
+++ b/src/lib/Button/Button.scss
@@ -1,4 +1,4 @@
-@use "static/mixins" as *;
+@use "src/styles/mixins" as *;
 
 /*
  * Button Element
@@ -31,8 +31,8 @@
             background-clip: padding-box;
             color: var(--text-color-primary);
             background-color: var(--control-color-default);
-            border-color: var(--ControlStrokeColorDefault);
-            border-top-color: var(--ControlStrokeColorSecondary);
+            border-color: var(--control-stroke-default);
+            border-top-color: var(--control-stroke-secondary);
 
             // Interaction states
             // Hover state
@@ -43,7 +43,7 @@
             // Active (pressed) state
             &:active {
                 background-color: var(--control-color-tertiary);
-                border-color: var(--ControlStrokeColorDefault);
+                border-color: var(--control-stroke-default);
                 color: var(--text-color-secondary);
             }
 
@@ -51,7 +51,7 @@
             &:disabled,
             &.disabled {
                 background-color: var(--control-color-disabled);
-                border-color: var(--ControlStrokeColorDefault);
+                border-color: var(--control-stroke-default);
                 color: var(--text-color-disabled);
             }
         }
@@ -60,8 +60,8 @@
         &accent {
             color: var(--accent-text-contrast-primary);
             background-color: var(--accent-color-default);
-            border-color: var(--ControlStrokeColorOnAccentDefault);
-            border-bottom-color: var(--ControlStrokeColorOnAccentSecondary);
+            border-color: var(--control-accent-stroke-default);
+            border-bottom-color: var(--control-accent-stroke-secondary);
             
             // Interaction states
             // Hover state
@@ -97,8 +97,8 @@
 
 @media (prefers-color-scheme: light) {
     .button.style-standard {
-        border-color: var(--ControlStrokeColorDefault);
-        border-bottom-color: var(--ControlStrokeColorSecondary);
+        border-color: var(--control-stroke-default);
+        border-bottom-color: var(--control-stroke-secondary);
     }
 }
 
