--- a/src/lib/ColorSwatch/ColorSwatch.scss
+++ b/src/lib/ColorSwatch/ColorSwatch.scss
@@ -3,9 +3,9 @@
     height: 72px;
     overflow: hidden;
     appearance: none;
-    border-radius: var(--control-corner-radius);
+    border-radius: calc(var(--control-corner-radius) + 2px);
     &:checked {
-        border: 3px solid var(--accent-color-default);
-        box-shadow: inset 0 0 0 2px var(--background-base);
+        box-shadow: inset 0 0 0 2px var(--accent-color-default),
+                    inset 0 0 0 3.5px var(--background-base);
     }
 }
